%%   }
%%   \subsection{Installation}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%%   \subsection{Documentation}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%%   \subsection{Internals}{
%%     \itemize{
%%       \item .
%%     }
%%   }
%% }

\name{NEWS}
\title{News for \R{} Package \pkg{fastbeta}}
\newcommand{\GH}{\href{https://github.com/davidearn/fastbeta/issues/#1}{GH##1}}

\section{Changes in version 0.5.0 (2025-08-17)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item \code{sir.aoi(\dots, root = \var{function})} is a multiple
      time series object storing the solution until the last root or
      time point.  Attribute \code{root.info} stores details about the
      system at the roots in the format \code{list(tau, state)}.
      Previously, \code{sir.aoi} discarded the solution and returned
      only details about the system at the first root.

      \item \code{sir.aoi(\dots, root = \var{function})} no longer has
      an attribute \code{curvature} storing the curvature of \code{Y} at
      the root.
    }
  }
  \subsection{Deprecated and Defunct}{
    \itemize{
      \item .
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item The expression for \eqn{\text{d}Y/\text{d}\tau}{dY/dtau}
      used by \code{sir.aoi} was wrong.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item \code{sir.aoi(\dots, aggregate = TRUE)} has additional
      columns storing the force of infection, incidence, and the
      curvature of \eqn{Y}.

      \item \code{sir.aoi} accepts new argument \code{eps} in order to
      support equations with equal, nonzero rates of birth and death.

      \item \code{sir.aoi} accepts new arguments \code{F} and
      \code{Fargs}, enabling the user to set a forcing function.

      \item \code{sir.aoi} accepts new arguments \code{H} and
      \code{Hargs}, enabling the user to set a susceptible
      hetereogeneity function.
