@@ -1,6 +1,6 @@
 Package: fastbeta
 Version: 0.5.0
-Date: 2025-08-17
+Date: 2025-08-21
 Title:
 	Fast Approximation of Time-Varying Infectious Disease Transmission
 	Rates
