@@ -9,31 +9,38 @@ reporting.
 }
 \usage{
 deconvolve(x, prob = 1, delay = 1,
-           start, tol = 1, iter.max = 32L, complete = FALSE)
+           start, x.pad = 0, tol = 1, iter.max = 32L, complete = FALSE)
 }
 \arguments{
 \item{x}{
   a numeric vector of length \code{n} giving the number of infections or
-  deaths reported during \code{n} observation intervals of equal
+  deaths reported during \code{n} successive time intervals of equal
   duration.}
 \item{prob}{
-  a numeric vector of length \code{d+n} such that \code{prob[d+i]} is
-  the probability that an infection during interval \code{i} is
-  eventually reported.  \code{prob} of length 1 is recycled.}
+  a numeric vector of length \code{d+n}, \code{d=length(delay)-1}, such
+  that \code{prob[d+i]} is the probability that an infection during
+  interval \code{i} is eventually reported.  \code{prob} of length 1 is
+  recycled.}
 \item{delay}{
-  a numeric vector of length \code{d+1} such that \code{delay[j]} is the
+  a numeric vector of positive length such that \code{delay[j]} is the
   probability that an infection during interval \code{i} is reported
   during interval \code{i+j-1}, given that it is eventually reported.
+  Hence \code{delay[j]} is the probability of a delay by \code{j-1}
+  intervals and \code{d=length(delay)-1} is the maximum delay.
   \code{delay} need not sum to 1 but must not sum to 0.}
 \item{start}{
-  a numeric vector of length \code{d+n} giving a starting value for the
-  iteration.  \code{start[d+i]} estimates the expected number of
-  infections during interval \code{i} that are eventually reported.  If
-  missing, then a starting value is generated by padding \code{x} on the
-  left and right with \code{d-d0} and \code{d0} zeros, choosing
-  \code{d0 = which.max(delay)-1}.  Note that zeros are invariant under
-  the iteration, hence it may be desirable to pad with a small positive
-  number instead.}
+  a numeric vector of length \code{d+n}, \code{d=length(delay)-1},
+  giving a starting value for the iteration.  \code{start[d+i]}
+  estimates the expected number of infections during interval \code{i}
+  that are eventually reported.  If missing, then a starting value is
+  generated by padding \code{x} on the left and right with \code{d-d0}
+  and \code{d0} elements equal to \code{x.pad}, choosing
+  \code{d0=which.max(delay)-1}.  Note that 0 is invariant under the
+  iteration, hence it can be desirable to set \code{x.pad} to a small
+  (relative to \code{max(x)}) positive number.}
+\item{x.pad}{
+  a non-negative number, used only when \code{start} is unset; see
+  above.}
 \item{tol}{
   a tolerance indicating a stopping condition; see the reference.  Set
   to 0 if you want to perform no fewer than \code{iter.max} iterations.}
@@ -54,6 +61,19 @@ A list with elements:
   the chi-squared statistics corresponding to \code{value}.}
 \item{iter}{
   the number of iterations performed.}
+
+\code{subset(value, start == 0)} is zero because zero is invariant under
+the iteration.  If \code{delay} has \code{l} leading zeros and \code{t}
+trailing zeros, then \code{head(value, t)} and \code{tail(value, l)} are
+\code{NaN} due to divide-by-zero in the iteration.  (Conceptually,
+\code{x} and \code{delay} provide no information about incidence during
+those intervals.)
+}
+\details{
+Do note that temporal alignment of \code{x} (length \code{n}) and
+\code{y=deconvolve(x, \dots)$value} (length or number of rows
+\code{d+n}) requires padding \code{x} on the left, as in
+\code{cbind(x=c(rep(NA, d), x), y)}; see the examples.
 }
 %\seealso{}
 \references{
