@@ -40,7 +40,7 @@
 \title{News for \R{} Package \pkg{fastbeta}}
 \newcommand{\GH}{\href{https://github.com/davidearn/fastbeta/issues/#1}{GH##1}}
 
-\section{Changes in version 0.5.0 (2025-08-17)}{
+\section{Changes in version 0.5.0 (2025-08-21)}{
   \subsection{Significant User-Visible Changes}{
     \itemize{
       \item \code{sir.aoi(\dots, root = \var{function})} is a multiple
@@ -96,6 +96,10 @@
       approximation of tail exponents of different variables.
 
       \item Function \code{cbind.ts} for working around \PR{18583}.
+
+      \item \code{deconvolve} accepts new argument \code{x.pad},
+      enabling the user to decide the value of the elements with which
+      \code{x} is padded when \code{start} is unset.
 
       \item New data set \code{pneumonia}, used in an example of
       \code{deconvolve} usage.
